trying fix url again

--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -1,4 +1,4 @@
-@import url('://fonts.googleapis.com/css?family=Covered+By+Your+Grace');
+@import url('//fonts.googleapis.com/css?family=Covered+By+Your+Grace');
 @import url("pygments.css");
 
 
