adding draft of learning from DAS season 3

--- a/mytheme/templates/article.html
+++ b/mytheme/templates/article.html
@@ -10,6 +10,7 @@
         {% include 'article_infos.html' %}<!-- /.post-info -->
         {{ article.content }}
         </div><!-- /.entry-content -->
+        <div class="taglist">{% include 'taglist.html' %}</div>
         {% if DISQUS_SITENAME %}
         <div class="comments">
         <h2>Comments</h2>
