--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -56,7 +56,7 @@ a, a:hover, a:visited {
 }
 
 #banner h1 {
-    font-family: Covered By Your Grace;
+    font-family: Covered By Your Grace, arial;
     font-size: 50px;
 }
 
@@ -108,4 +108,9 @@ img {
 code {
     background-color: #ddd;
     padding: 1px 2px;
+}
+
+.taglist {
+    font-size: 90%;
+    font-style: italic;
 }
