--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -114,3 +114,22 @@ code {
     font-size: 90%;
     font-style: italic;
 }
+
+blockquote {
+    background: #f0f0f0;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+}
+blockquote p {
+    display: inline;
+}
