--- a/mytheme/templates/index.html
+++ b/mytheme/templates/index.html
@@ -1,41 +1,38 @@
 {% extends "base.html" %}
 {% block content_title %}{% endblock %}
 {% block content %}
-{% if articles %}
-{% for article in articles %}
-    {% if loop.index == 1 %}
-     <section id="content" class="body">
-        <aside id="featured"><article>
-                <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url
-                }}">{{ article.title }}</a></h1>
-                {% include 'article_infos.html' %}
-                {{ article.content }}
-        </article></aside>
-        {% if loop.length  > 1 %}
-                <hr />
-                <h1>Other articles</h1>
-                    <ul id="posts-list" class="hfeed">
-        {% endif %}
-    {% else %}
-        <li><article class="hentry">
-                <header>
-                        <h1><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h1>
-                </header>
 
-                <div class="entry-content">
-                <abbr class="published" title="{{ article.date.isoformat() }}">Posted at {{ article.locale_date }}</abbr>
-                </div>
-        </article></li>
-    {% endif %}
-{% endfor %}
-</ul>
+{% if articles %}
+
+{% set latest_article = articles[0] %}
+<section id="content" class="body">
+    <aside id="featured">
+        <article>
+            <h1 class="entry-title">
+                <a href="{{ SITEURL }}/{{ latest_article.url }}">{{ latest_article.title }}</a>
+            </h1>
+            {% with article = latest_article %}
+            {% include 'article_infos.html' %}
+            {% endwith %}
+            {{ latest_article.content }}
+        </article>
+    </aside>
+    <hr />
+
+    {% with articles = articles[1:] %}
+    {% set list_title = 'Other articles' %}
+    {% include "article_list.html" %}
+    {% endwith %}
 </section>
+
 {% else %}
 <section id="content" class="body">
+<p>No articles found.</p>
 <h2>Pages</h2>
 {% for page in PAGES %}
     <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
 {% endfor %}
 </section>
 {% endif %}
+
 {% endblock content %}
