--- a/mytheme/templates/tag.html
+++ b/mytheme/templates/tag.html
@@ -1,2 +1,10 @@
-{% extends "index.html" %}
-{% block title %}{{ SITENAME }} - {{ tag }}{% endblock %}
+{% extends "base.html" %}
+{% block content %}
+<section id="content" class="body">
+
+{% with articles = dates %}
+{% set list_title = 'Articles tagged with: %s' % tag %}
+{% include "article_list.html" %}
+{% endwith %}
+</section>
+{% endblock %}
