--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -56,17 +56,33 @@ a, a:hover, a:visited {
 }
 
 #banner h1 {
+    margin-top: 0;
     font-family: Covered By Your Grace, arial;
-    font-size: 50px;
+    font-size: 3em;
 }
 
-h1 a, h1 {
+h1, h2, h1, h1 a, h2 a {
     text-decoration: none;
     color: #811 !important;
 }
 
+h1 {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+}
+
 h1.entry-title {
     font-size: 1.5em;
+}
+
+h2 {
+    margin: 0;
+    margin-top: 0.7em;
+}
+
+h1.archive-title {
+    color: #444 !important;
+    font-size: 1.8em;
 }
 
 nav ul {
@@ -115,6 +131,10 @@ code {
     font-style: italic;
 }
 
+ul.posts-list li {
+    list-style-type: none;
+}
+
 blockquote {
     background: #f0f0f0;
     border-left: 10px solid #ccc;
@@ -122,6 +142,7 @@ blockquote {
     padding: 0.5em 10px;
     quotes: "\201C""\201D""\2018""\2019";
 }
+
 blockquote:before {
     color: #ccc;
     content: open-quote;
@@ -130,6 +151,7 @@ blockquote:before {
     margin-right: 0.25em;
     vertical-align: -0.4em;
 }
+
 blockquote p {
     display: inline;
 }
