--- a/mytheme/templates/archives.html
+++ b/mytheme/templates/archives.html
@@ -1,15 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="content" class="body">
-<h1>Archives for {{ SITENAME }}</h1>
-
-<ul>
-{% for article in dates %}
-    <li>
-        <a href='{{ article.url }}'>{{ article.title }}</a>
-        at <abbr class="published" title="{{ article.date.isoformat() }}">{{ article.locale_date }}</abbr>
-    </li>
-{% endfor %}
-</ul>
+{% with articles = dates %}
+{% set list_title = 'All articles'  %}
+{% include "article_list.html" %}
+{% endwith %}
 </section>
 {% endblock %}
