--- a/mytheme/templates/article.html
+++ b/mytheme/templates/article.html
@@ -2,30 +2,35 @@
 {% block title %}{{ article.title|striptags }}{% endblock %}
 {% block content %}
 <section id="content" class="body">
-<article>
-        <header> <h1 class="entry-title"><a href="{{ article.url }}"
-        rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title
-        }}</a></h1> {% include 'twitter.html' %} </header>
+    <article>
+        <header>
+            <h1 class="entry-title">
+                <a href="{{ article.url }}"
+                    rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
+            </h1>
+        </header>
+
         <div class="entry-content">
-        {% include 'article_infos.html' %}<!-- /.post-info -->
-        {{ article.content }}
-        </div><!-- /.entry-content -->
+            {% include 'article_infos.html' %}
+            {{ article.content }}
+        </div>
+
         <div class="taglist">{% include 'taglist.html' %}</div>
+
         {% if DISQUS_SITENAME %}
         <div class="comments">
-        <h2>Comments</h2>
+            <h2>Comments</h2>
             <div id="disqus_thread"></div>
             <script type="text/javascript">
-               var disqus_identifier = "{{ article.url }}";
-               (function() {
-               var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-               dsq.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
-               (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-              })();
+                var disqus_identifier = "{{ article.url }}";
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
             </script>
         </div>
         {% endif %}
-
-</article>
+    </article>
 </section>
 {% endblock %}
