--- a/mytheme/templates/article_infos.html
+++ b/mytheme/templates/article_infos.html
@@ -1,9 +1,10 @@
 <footer class="post-info">
         {% if article.author %}
         <address class="vcard author">
-                posted by <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>
-                at <abbr class="published" title="{{ article.date.isoformat() }}">{{ article.locale_date }}</abbr>
+            posted by
+            <a href="{{ SITEURL }}/pages/about-me.html">{{ article.author }}</a>
+            on <abbr class="published" title="{{ article.date.isoformat() }}">{{ article.date.strftime('%Y, %B %d') }}</abbr>
         </address>
         {% endif %}
 {% include 'translations.html' %}
-</footer><!-- /.post-info -->
+</footer>
