--- a/mytheme/templates/taglist.html
+++ b/mytheme/templates/taglist.html
@@ -1,2 +1,7 @@
-{% if article.tags %}<p>Tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% endfor %}</p>{% endif %}
-{% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">get the pdf</a>{% endif %}</p>
+{% if article.tags %}
+<p>Tags:
+    {% for tag in article.tags %}
+    <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
+    {% endfor %}
+</p>
+{% endif %}
