better layout, add summary plugins

--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -48,7 +48,12 @@
 body {
     font: 16px arial, sans-serif;
     color: #111;
-    background-color: #fafafa;
+    background-color: #dadaea;
+}
+
+.site-container {
+    background-color: #fefefe;
+    padding: 1em;
 }
 
 a, a:hover, a:visited {
@@ -67,7 +72,7 @@ h1, h2, h1, h1 a, h2 a {
 }
 
 h1 {
-    margin-top: 1em;
+    margin-top: 2em;
     margin-bottom: 0.5em;
 }
 
