--- a/mytheme/templates/index.html
+++ b/mytheme/templates/index.html
@@ -1,38 +1,34 @@
 {% extends "base.html" %}
 {% block content_title %}{% endblock %}
 {% block content %}
+<section id="content" class="body">
 
 {% if articles %}
+    {% for article in articles_page.object_list %}
+    <header class="posttitle">
+        <h1>
+            <a href="{{ SITEURL }}/{{ article.url }}"
+                rel="bookmark" class="nodec"
+                title="Permalink to {{ article.title|striptags }}">{{ article.title }}
+            </a>
+        </h1>
+        <small class="published" title="{{ article.date.isoformat() }}">{{ article.date.strftime("%Y, %B %d") }}</small>
+    </header>
 
-{% set latest_article = articles[0] %}
-<section id="content" class="body">
-    <aside id="featured">
-        <article>
-            <h1 class="entry-title">
-                <a href="{{ SITEURL }}/{{ latest_article.url }}">{{ latest_article.title }}</a>
-            </h1>
-            {% with article = latest_article %}
-            {% include 'article_infos.html' %}
-            {% endwith %}
-            {{ latest_article.content }}
-        </article>
-    </aside>
-    <hr />
-
-    {% with articles = articles[1:] %}
-    {% set list_title = 'Other articles' %}
-    {% include "article_list.html" %}
-    {% endwith %}
-</section>
-
+    <div class="postsummary"> {{ article.summary }} </div>
+    {% if article.content != article.summary %}
+    <a href="{{ SITEURL }}/{{ article.url }}"
+        title="Permalink to {{ article.title|striptags }}">Continue reading &rarr;
+    </a>
+    {% endif %}
+    {% endfor %}
 {% else %}
-<section id="content" class="body">
-<p>No articles found.</p>
-<h2>Pages</h2>
-{% for page in PAGES %}
-    <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
-{% endfor %}
-</section>
+    <p>No articles found.</p>
+    <h2>Pages</h2>
+    {% for page in PAGES %}
+        <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
+    {% endfor %}
 {% endif %}
 
+</section>
 {% endblock content %}
