--- a/mytheme/templates/base.html
+++ b/mytheme/templates/base.html
@@ -26,6 +26,8 @@
 <body id="index" class="home">
     <a name="top"></a>
 {% include 'github.html' %}
+
+<div class="site-container">
         <header id="banner" class="body">
                 <h1><a href="{{ SITEURL }}/index.html">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
                 <nav><ul>
@@ -89,6 +91,7 @@
         <footer class="footer-menu">
             <a href="#top">Back to the top</a>
         </footer>
+</div>
 
 {% include 'analytics.html' %}
 </body>
