minor layout adjusts, code cleanup

--- a/mytheme/templates/tag.html
+++ b/mytheme/templates/tag.html
@@ -2,9 +2,28 @@
 {% block content %}
 <section id="content" class="body">
 
-{% with articles = dates %}
-{% set list_title = 'Articles tagged with: %s' % tag %}
-{% include "article_list.html" %}
-{% endwith %}
+<header>
+    <h1>Articles tagged with {{ tag }}</h1>
+</header>
+
+<ul class="posts-list" class="hfeed">
+{% for article in articles %}
+<li>
+    <article class="hentry">
+        <header>
+            <h2>
+                <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">
+                    {{ article.title }}
+                </a>
+            </h2>
+            <small>
+                <abbr class="published" title="{{ article.date.isoformat() }}">{{ article.date.strftime("%Y, %B %d") }}</abbr>
+            </small>
+        </header>
+    </article>
+</li>
+{% endfor %}
+</ul>
+
 </section>
 {% endblock %}
