--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -72,15 +72,17 @@ h1, h2, h1, h1 a, h2 a {
 }
 
 h1 {
+    font-size: 1.7em;
     margin-top: 2em;
     margin-bottom: 0.5em;
 }
 
-h1.entry-title {
-    font-size: 1.5em;
+header:first-child h1 {
+    margin-top: 1em;
 }
 
 h2 {
+    font-size: 1.2em;
     margin: 0;
     margin-top: 0.7em;
 }
