--- a/mytheme/templates/page.html
+++ b/mytheme/templates/page.html
@@ -2,7 +2,9 @@
 {% block title %}{{ page.title }}{% endblock %}
 {% block content %}        
 <section id="content" class="body">    
-    <h1 class="entry-title">{{ page.title }}</h1>
+    <header>
+        <h1 class="entry-title">{{ page.title }}</h1>
+    </header>
     {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">get
     the pdf</a>{% endif %}
     {{ page.content }}
