--- a/mytheme/templates/base.html
+++ b/mytheme/templates/base.html
@@ -88,6 +88,9 @@
         </footer>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="{{ SITEURL }}/static/main.js"></script>
+
 {% include 'analytics.html' %}
 </body>
 </html>
