--- a/mytheme/templates/base.html
+++ b/mytheme/templates/base.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body id="index" class="home">
+<body>
     <a name="top"></a>
 
 <div class="site-container">
@@ -87,9 +87,6 @@
             <a href="#top">Back to the top</a>
         </footer>
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="{{ SITEURL }}/static/main.js"></script>
 
 {% include 'analytics.html' %}
 </body>
