--- a/mytheme/templates/index.html
+++ b/mytheme/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content_title %}{% endblock %}
 {% block content %}
-<section id="content" class="body">
+<section id="content" class="home-content">
 
 {% if articles %}
     {% for article in articles_page.object_list %}
