--- a/mytheme/static/css/main.css
+++ b/mytheme/static/css/main.css
@@ -250,3 +250,11 @@ blockquote:before {
 blockquote p {
     display: inline;
 }
+
+a.edit-article {
+    color: transparent;
+}
+
+address:hover > a.edit-article {
+    color: #ccc;
+}
