add frontend redirect to https

--- a/mytheme/templates/base.html
+++ b/mytheme/templates/base.html
@@ -9,6 +9,12 @@
         {% if FEED_RSS %}
         <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
         {% endif %}
+<script>
+var host = "eliasdorneles.github.io";
+if (window.location.host == host && window.location.protocol != "https:") {
+  window.location.protocol = "https:";
+}
+</script>
 
 
         <!--[if IE]>
